2009-08-14  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/gutenprint.xml: Updated to represent version 5.2.4.

2009-08-04  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/mj500c.xml: Marked obsolete with "stcolor" as recommended
	  replacement. The driver is buggy on Ghostscript 8.60 and newer
	  (Red Hat bug #513676, Ghostscript bug #689595).

2009-08-04  Tim Waugh  <twaugh@redhat.com>

	* driver/stcolor.xml, printer/Epson-Stylus_Color_200.xml: Changed the
	  recommended driver for the Epson Stylus Color 200 to "stcolor".The
	  "mj500c" driver is buggy on Ghostscript 8.60 and newer (Red Hat bug
	  #513676).

2009-07-29  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/Postscript-Brother.xml, driver/Postscript-Epson.xml,
	  driver/Postscript-Gestetner.xml, driver/Postscript-HP.xml,
	  driver/Postscript-InfoPrint.xml, driver/Postscript-Infotec.xml,
	  driver/Postscript-KONICA_MINOLTA.xml,
	  driver/Postscript-Kyocera.xml, driver/Postscript-Lanier.xml,
	  driver/Postscript-NRG.xml, driver/Postscript-Oce.xml,
	  driver/Postscript-Oki.xml, driver/Postscript-Ricoh.xml,
	  driver/Postscript-Savin.xml, driver/Postscript-Sharp.xml,
	  driver/Postscript-Toshiba.xml, driver/Postscript2-Oce.xml,
	  driver/dplix.xml, driver/gutenprint.xml, driver/hl7x0.xml,
	  driver/ljet4.xml, driver/pxlcolor-Gestetner.xml,
	  driver/pxlcolor-InfoPrint.xml, driver/pxlcolor-Infotec.xml,
	  driver/pxlcolor-Lanier.xml, driver/pxlcolor-NRG.xml,
	  driver/pxlcolor-Ricoh.xml, driver/pxlcolor-Savin.xml,
	  driver/pxlmono-Gestetner.xml, driver/pxlmono-InfoPrint.xml,
	  driver/pxlmono-Infotec.xml, driver/pxlmono-Lanier.xml,
	  driver/pxlmono-NRG.xml, driver/pxlmono-Ricoh.xml,
	  driver/pxlmono-Savin.xml, driver/rastertokmXXXXdl.xml,
	  driver/splix.xml: Removed redundant boolean tags "<freesoftware />"
	  and "<nopatents />".

	* printer/Brother-HL-1250.xml, printer/Brother-HL-1270N.xml,
	  printer/Brother-HL-1650.xml, printer/Brother-HL-1670N.xml,