@@ -1,0 +1,38 @@
+<printer id="printer/Texas_Instruments-microLaser_PowerPro_12">
+   <make>Texas Instruments</make>
+   <model>microLaser PowerPro 12</model>
+   <mechanism>
+   <!--not "color"-->
+      <laser/>
+      <resolution>
+         <dpi>
+            <!--x unknown-->
+            <!--y unknown-->
+         </dpi>
+      <consumables>
+      </consumables>
+      </resolution>
+   </mechanism>
+   <url>ftp://ftp.tallygenicom.com/pub/genicom/docs/ti/dsTI-mLPowerPro.pdf</url>
+   <lang>
+      <postscript level="2">
+      </postscript>
+      <pcl level="5"/>
+      <!--no pjl-->
+      <!--no "text"-->
+   </lang>
+   <functionality>B</functionality>
+   <driver>Postscript</driver>
+   <drivers>
+     <driver>
+       <id>Postscript</id>
+     </driver>
+   </drivers>
+   <comments>
+      <en>
+      Throughput = 12
+      
+      Foomatic entry made by PPDtoXML T/G 0.20 on 2009-03-17
+      </en>
+   </comments>
+</printer>
