@@ -1,3 +1,14 @@
+2009-08-17  Dafydd Crosby <dcrosby@userful.com>
+	* printer/Genicom-microLaser_12.xml,
+	printer/Texas_Instruments-microLaser_PowerPro_12.xml,
+	printer/Texas_Instruments-microLaser_Pro_600.xml,
+	printer/Texas_Instruments-microLaser_Pro_8.xml,
+	printer/Texas_Instruments-microLaser_Pro_E.xml,
+	printer/Texas_Instruments-microLaser_XL_Basic.xml,
+	printer/Texas_Instruments-microLaser_XL_PS17.xml,
+	printer/Texas_Instruments-microLaser_XL_PS35.xml,
+	printer/Texas_Instruments-microLaser_XL_Turbo.xml: added printers
+
 2009-08-14  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* driver/gutenprint.xml: Updated to represent version 5.2.4.
